--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -73,3 +73,12 @@ h2,h3 {
     padding-bottom:20px;
 }
 
+.item {
+    text-align: center;
+}
+
+.item img {
+    margin:0 auto;
+    width: 25%;
+    height: 50%;
+}
