Added a padding and continued to finsh up the merge

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -1,7 +1,9 @@
 /*
  *  Colours: 
  */
-/*@green_dark: #8FBE00;
+
+/*
+@green_dark: #8FBE00;
 @green_light: #AEE239;
 @accent1: #00A8C6;
 @accent2:#40C0CB;
@@ -57,6 +59,7 @@ h2,h3 {
 
 #body {
     margin-top: 20px;
+    padding-top: 20px;
     background:@light;
     .rounded-corners(4px,0);
 }
