updates to tree background, and small changes to template

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -96,7 +96,7 @@ h3 {
 #body {
     margin-top: 20px;
     padding-top: 20px;
-    background:@light url('/static/img/tree.png') bottom left no-repeat;
+    background:@light url('/static/img/tree2.png') bottom left no-repeat;
     .rounded-corners(8px,0);
 }
 
