Made changes to the sample image, added buttons to home.mako and played with the css for the buttons.

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -22,7 +22,8 @@
 // @light: #FFF;
 
 @green_dark: #6F7F06;
-@green_light: #AFC32E;
+//@green_light: #AFC32E;
+@green_light: #ADE1E9; 
 @accent1:#CFA408;
 @accent1d:#806506;
 @accent1l:#FFF;
@@ -95,4 +96,8 @@ h2,h3 {
     margin:0 auto;
     width: 100%;
     //height: 75%;
+}
+
+#btn btn-large {
+    top-margin: 10cm;
 }
