--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -22,14 +22,18 @@
 // @light: #FFF;
 
 @green_dark: #6F7F06;
-//@green_light: #AFC32E;
-@green_light: #ADE1E9; 
+@green_light: #AFC32E;
+//@green_light: #ADE1E9; 
 @accent1:#CFA408;
 @accent1d:#806506;
 @accent2:#ADE1E9;
 @accent3:#F9D818;
 @dark: #111;
 @light: #FFF;
+@buttonColor: #d46d45;
+@btnAccent1: #b1432a;
+@btnAccent2: #e28d79;
+@btnAccent3: #51281f;
 
 /***************************/
 
@@ -130,6 +134,32 @@ h3 {
     //height: 75%;
 }
 
-#btn btn-large {
+/*#btn btn-large {
     top-margin: 10cm;
+}*/
+
+.button {
+ 
+    /*basic styles*/
+    width: 200px;  
+    height: 40px;  
+    color: white; 
+    background-color: @buttonColor;
+    text-align: center;  
+    font-size: 20px;  
+    line-height: 20px; 
+ 
+    /*gradient styles*/
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(@buttonColor), to(@btnAccent1));
+    background: -moz-linear-gradient(19% 75% 90deg,@btnAccent1, @buttonColor);
+ 
+    /*border styles*/
+    border-top: solid 2px @btnAccent2;
+    border-bottom: solid 1px @btnAccent3;
+    border-right: solid 1px @buttonColor;
+    border-left: solid 1px @buttonColor;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+ 
 }
