--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -161,5 +161,11 @@ h3 {
     -moz-border-radius: 30px;
     -webkit-border-radius: 30px;
     border-radius: 30px;
- 
 }
+
+.donate_buttons {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
