Added margins to the buttons

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -148,7 +148,8 @@ h3 {
     text-align: center;  
     font-size: 20px;  
     line-height: 20px; 
- 
+    margin-top: 10px;
+    margin-left: 5px;
     /*gradient styles*/
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(@buttonColor), to(@btnAccent1));
     background: -moz-linear-gradient(19% 75% 90deg,@btnAccent1, @buttonColor);
