Added a logo! and made changes to the three home buttons.

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -23,7 +23,6 @@
 
 @green_dark: #6F7F06;
 @green_light: #AFC32E;
-//@green_light: #ADE1E9; 
 @accent1:#CFA408;
 @accent1d:#806506;
 @accent2:#ADE1E9;
@@ -137,7 +136,9 @@ h3 {
 /*#btn btn-large {
     top-margin: 10cm;
 }*/
-
+#buttonContainer {
+    text-align: center;
+}
 .button {
  
     /*basic styles*/
@@ -163,4 +164,8 @@ h3 {
     -webkit-border-radius: 30px;
     border-radius: 30px;
  
+}
+
+a.brand {
+    padding: 0 0px !important;
 }
