Made a whole bunch of changes. Including a new photo to replace the farmer. (Sorry) There is a signup button, which does not show up on mobile phones.

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -169,3 +169,50 @@ h3 {
 a.brand {
     padding: 0 0px !important;
 }
+
+.signupBtn {
+ 
+    /*basic styles*/
+    width: 250px;  height: 50px;  color: white; background-color: #99CF00;
+    text-align: center;  font-size: 30px;  line-height: 50px;
+ 
+ 
+    /*gradient styles*/
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#99CF00), to(#6DB700));
+    background: -moz-linear-gradient(19% 75% 90deg,#6DB700, #99CF00);
+ 
+    /*border styles*/
+    border-left: solid 1px #c3f83a;
+    border-top: solid 1px #c3f83a;
+    border-right: solid 1px #82a528;
+    border-bottom: solid 1px #58701b;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    
+    margin:0 auto;
+    margin-top: 90px;
+    //-webkit-gradient(linear, 0% 0%, 0% 100%, from(#99CF00), to(#6DB700))
+}
+ 
+.signupBtn h3 {
+    font-size: 20px;
+    line-height: 35px;
+    font-family: helvetica, sans-serif;
+}
+ 
+.signupBtn p {
+    font-size: 12px;
+    line-height: 4px;
+    font-family: helvetica, sans-serif;
+}
+ 
+.signupBtn a {
+    text-decoration: none;
+    color: fff;
+}
+ 
+.signupBtn:hover {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#6DB700), to(#99CF00));
+    background: -moz-linear-gradient(19% 75% 90deg,#99CF00, #6DB700);
+}
