--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -173,8 +173,13 @@ a.brand {
 .signupBtn {
  
     /*basic styles*/
-    width: 250px;  height: 50px;  color: white; background-color: #99CF00;
-    text-align: center;  font-size: 30px;  line-height: 50px;
+    width: 240px;  
+    //height: 70px;  
+    color: white; 
+    background-color: #AFC32E;
+    text-align: center;  
+    font-size: 30px;  
+    line-height: 50px;
  
  
     /*gradient styles*/
@@ -202,14 +207,15 @@ a.brand {
 }
  
 .signupBtn p {
-    font-size: 12px;
-    line-height: 4px;
+    font-size: 16px;
+    line-height: 12px;
     font-family: helvetica, sans-serif;
 }
  
 .signupBtn a {
     text-decoration: none;
     color: fff;
+    font-size: 18px;
 }
  
 .signupBtn:hover {
