Make the buttons real buttons.

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -214,7 +214,7 @@ a.brand {
  
 .signupBtn a {
     text-decoration: none;
-    color: fff;
+    color: #fff !important;
     font-size: 18px;
 }
  
