Added to hover to the buttons

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -166,6 +166,13 @@ h3 {
  
 }
 
+.button:hover {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#b1432a), to(#d46d45));
+    background: -moz-linear-gradient(19% 75% 90deg,#d46d45, #b1432a);
+    border-top: solid 2px #b1432a;
+    border-bottom: solid 1px #e28d79;
+}
+
 a.brand {
     padding: 0 0px !important;
 }
