--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -49,9 +49,9 @@
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.065);
 }
 
-/*p {
+.aboutP p {
     margin-bottom: 20px;
-}*/
+}
 
 body {
     color:@dark;
