Rounded the corners on base. Removed arrows in carosel. Set it to change at an interval of 4000

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -104,7 +104,7 @@ h3 {
     margin-top: 20px;
     padding-top: 20px;
     background:@light url('/static/img/tree2.png') bottom left no-repeat;
-    .rounded-corners(8px,0);
+    .rounded-corners(8px,0px);
 }
 
 .contents {
@@ -124,6 +124,7 @@ h3 {
     color: @dark;
     background-color: @accent1;
     padding-bottom:20px;
+    .rounded-corners(0px,8px);
 }
 
 .item {
