--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -36,7 +36,7 @@
 
 /***************************/
 
-@import url(http://fonts.googleapis.com/css?family=Mate+SC);
+// @import url(http://fonts.googleapis.com/css?family=Mate+SC);
 
 .rounded-corners(@radiusT: 4px, @radiusB: 4px) {
     border-radius:@radiusT @radiusT @radiusB @radiusB;
@@ -236,4 +236,18 @@ a.brand {
 
 .accordion {
     background: #FFF;
+}
+
+.inline-error:focus {
+    border-color: #953B39!important;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #D59392!important;
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 6px #d59392!important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #D59392!important;
+}
+.inline-error {
+    border-color: #B94A48!important;
+    color: #B94A48!important;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)!important;
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075)!important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)!important;
 }
