--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -251,3 +251,7 @@ a.brand {
     -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075)!important;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)!important;
 }
+
+.inline-error-label {
+    color: #B94A48!important;
+}
