reenabled google web font

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -36,7 +36,7 @@
 
 /***************************/
 
-// @import url(http://fonts.googleapis.com/css?family=Mate+SC);
+@import url(http://fonts.googleapis.com/css?family=Mate+SC);
 
 .rounded-corners(@radiusT: 4px, @radiusB: 4px) {
     border-radius:@radiusT @radiusT @radiusB @radiusB;
