added homepage revisions

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -207,7 +207,8 @@ a.brand {
     border-radius: 10px;
     
     margin:0 auto;
-    margin-top: 90px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     //-webkit-gradient(linear, 0% 0%, 0% 100%, from(#99CF00), to(#6DB700))
 }
  
