Fixed the image on the home page

--- a/farm2fork_otmd/static/css/style.less
+++ b/farm2fork_otmd/static/css/style.less
@@ -112,6 +112,7 @@ h3 {
 }
 
 #farmer-pic {
+    width: 100%;
     padding-right:10px;
     .thumbnail {
         text-align:center;
@@ -144,7 +145,6 @@ h3 {
     text-align: center;
 }
 .button {
- 
     /*basic styles*/
     width: 200px;  
     height: 40px;  
